--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-	<head>
+<!doctype html>
+<html ⚡ lang="id">
+<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>PG Soft: Situs Judi Slot Online Gacor 2022 Terbaru</title>
