--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ⚡ lang="id">
+<html ⚡ lang="id">	
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -223,7 +223,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12 mt-3">
-				<a href="https://linktr.ee/linkslot88gacor" rel="nofollow noreferrer" target="_blank"><button type="login" class="btn btn-daf">SLOT ONLINE GACOR TERBARU 2022</a>
+				<a href="https://linktr.ee/linkslot88gacor" rel="nofollow noreferrer" target="_blank"><button type="login" class="btn btn-daf">PG SOFT SLOT ONLINE GACOR TERBARU 2022</a>
 			</div>
 		</div>
 	</div>	
@@ -263,10 +263,10 @@
 <div class="col-md-6 pt-3 p-0 acenter">
  <div class="row">
    <div class="col-xs-6">
-   <a href="https://pgsoft.sinonjs.org/" title="SLOT ONLINE"><span class="tron">SLOT ONLINE</span></a>
+   <a href="https://pgsoft.sinonjs.org/" title="PG SOFT"><span class="tron">PG SOFT</span></a>
    </div>
    <div class="col-xs-6">
-   <a href="https://pgsoft.sinonjs.org/" title="POKER ONLINE"><span class="tron">POKER ONLINE</span></a>
+   <a href="https://pgsoft.sinonjs.org/" title="SLOT ONLINE"><span class="tron">SLOT ONLINE</span></a>
    </div>
  </div>  
  </div>
@@ -274,10 +274,10 @@
 <div class="col-md-6 pt-3 p-0 acenter">
  <div class="row">
    <div class="col-xs-6">
-   <a href="https://pgsoft.sinonjs.org/" title="SLOT ONLINE"><span class="tron">TOGEL ONLINE</span></a>
+   <a href="https://pgsoft.sinonjs.org/" title="SLOT GACOR"><span class="tron">SLOT GACOR</span></a>
    </div>
    <div class="col-xs-6">
-   <a href="https://pgsoft.sinonjs.org/" rel="nofollow noopener" target="_blank" title="TOGEL ONLINE" class="spacer"><span class="tron">SLOT GACOR</span></a>
+   <a href="https://pgsoft.sinonjs.org/" rel="nofollow noopener" target="_blank" title="SLOT PG" class="spacer"><span class="tron">SLOT PG</span></a>
    </div>
  </div>  
 </div>
@@ -290,13 +290,13 @@
 		<table class="alojudi" style="width:100%">
 			<thead>
 				<tr>
-				<th colspan="3">Tentang Situs Slot Online Gacor Terbaru 2022</th>
+				<th colspan="3">Tentang Situs Slot Online PG Soft Terbaru 2022</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td style="padding: 10px;">Nama Situs</td>
-					<td style="padding: 10px;"><a href="https://pgsoft.sinonjs.org/" title="SLOT GACOR TERBARU 2022" rel="nofollow noopener" target="_blank">SLOT GACOR TERBARU 2022</a></td>
+					<td style="padding: 10px;"><a href="https://pgsoft.sinonjs.org/" title="PG SOFT" rel="nofollow noopener" target="_blank">PG SOFT</a></td>
 				</tr>
 				<tr>
 					<td style="padding: 10px;">Jenis Permainan</td>
@@ -304,7 +304,7 @@
 				</tr>
 				<tr>
 					<td style="padding: 10px;">Minimal Deposit</td>
-					<td style="padding: 10px;">Rp 20.000</td>
+					<td style="padding: 10px;">Rp 5.000</td>
 				</tr>
 				<tr>
 					<td style="padding: 10px;">Metode Deposit</td>
@@ -333,12 +333,12 @@
 		<div class="row mb-3" style="background-color: #020202;">
 			<div class="col-md-12 pb-5">
 				<div class="site-description">
-					<p id="breadcrumbs"><span><span><a href="https://pgsoft.sinonjs.org/">Home</a> » <a href="https://pgsoft.sinonjs.org/">SLOT ONLINE GACOR TERBARU 2022</a> » <strong class="breadcrumb_last" aria-current="page">Situs Judi Slot Online Terpopuler Paling Gacor 2022</strong></span></span></p><hr />
+					<p id="breadcrumbs"><span><span><a href="https://pgsoft.sinonjs.org/">Home</a> » <a href="https://pgsoft.sinonjs.org/">PG SOFT SLOT ONLINE GACOR TERBARU 2022</a> » <strong class="breadcrumb_last" aria-current="page">Situs Judi Slot Online Terpopuler PG Soft 2022</strong></span></span></p><hr />
     <div class="tron-images">
 <amp-img src="https://i.ibb.co/PwdFtqZ/eb5335-27fa79b9800f461d91d3dcb74621cea2-mv2.gif" width="910" height="262" layout="intrinsic" alt="Judi Online"></amp-img>
 	</div>
 <hr />
-<h1 itemprop="headline"><strong>Situs Judi Slot Online Terpopuler Paling Gacor</strong></h1>
+<h1 itemprop="headline"><strong>Situs Judi Slot Online Terpopuler PG Soft</strong></h1>
 <p>Link Daftar Situs Judi <strong><a href="https://pgsoft.sinonjs.org/" target="_blank">PG Soft</a></strong> 2022 Hari Ini Merupakan daftar situs judi slot online terbaik 2022 dan situs slot online terbaik di Indonesia yang sudah menjadi bandar situs khusus judi slot online di Asia dengan permainan terlengkap deposit pulsa yang di berikan oleh situs judi online PG Soft 2022. Situs agen judi PG Soft terbaru menyediakan berbagai permainan yang mudah untuk menang seperti bola online sbobet88, live casino online, situs judi slot online 2022 , poker online, arcade online. Situs Judi Slot Online Gacor Gampang Menang dan Terbaik di Indonesia bersama Slot GACOR slot online yang akan selalu memberikan fasilitas dan layanan terkemuka untuk para pemain Situs PG Soft PG Soft online Indonesia.</p>
 
 <p>Ada banyak sekali game judi PG Soft hari ini mudah menang yang bisa anda mainkan di situs judi slot terbaik dan terpercaya no 1 diantara lainnya adalah :</p>
@@ -359,13 +359,13 @@
     <li style="text-align: justify;">One Touch</li>
 </ol>
 
-<p>Di <strong><a href="https://pgsoft.sinonjs.org/" target="_blank">Slot PG Soft</a></strong> situs judi PG Soft hari ini terpercaya cepat menang juga hadirkan judi layanan judi slot online deposit via pulsa Telkomsel dan juga layanan deposit via e-money Dana, Sakuku, Ovo, LinkAja, Gopay. Tidak hanya itu, kami juga didukung layanan judi slot deposit bank lokal Bca, Bri, Bni, Mandiri.</p>
+<p>Di <strong><a href="https://pgsoft.sinonjs.org/" target="_blank">Slot PG</a></strong> situs judi PG Soft hari ini terpercaya cepat menang juga hadirkan judi layanan judi slot online deposit via pulsa Telkomsel dan juga layanan deposit via e-money Dana, Sakuku, Ovo, LinkAja, Gopay. Tidak hanya itu, kami juga didukung layanan judi slot deposit bank lokal Bca, Bri, Bni, Mandiri.</p>
 
-<h2><strong>Situs PG Soft Judi Slot Online Terbaik Dan Terpercaya 2022</strong></h2>
+<h2><strong>PG Soft Judi Slot Online Terbaik Dan Terpercaya 2022</strong></h2>
 
 <p>Selamat datang di link daftar 12 situs judi slot online terpercaya 2022 yang gampang menang di Indonesia yaitu PG Soft. Agen judi online terbaik slot gacor mudah menang menyediakan fasilitas untuk bermain judi terpercaya dengan uang asli menggunakan aplikasi dewa slot online ataupun menggunakan browser dari laptop maupun smartphone. Situs PG Soft sebagai merk dagang dari situs judi slot online resmi dan memiliki situs slot online terbesar di Indonesia dengan total member mencapai ribuan orang sudah terdaftar di web judi online kami untuk mencari uang tambahan. Atau menjadikan kegiatan mereka bermain judi sebagai mata pencaharian utama yang di hasilkan dari game judi slot lengkap atau judi online.</p>
 
-<h3><strong>Situs Judi Slot Online Gacor Terbaik 2022 Gampang Menang</strong></h3>
+<h3><strong>Situs Judi Slot Online PG Soft Terbaik 2022 Gampang Menang</strong></h3>
 
 <p>Situs judi slot online mudah menang ialah kategori game taruhan yang tergolong lumayan mudah guna di mainkan. Dalam permainan judi slot ini hal keberuntungan cukup dominan untuk menemukan kemenangan bilamana main slot online. Judi slot online sendiri memiliki sejumlah provider yang meluangkan mesin slot online serta memiliki tidak sedikit sekali yang dapat anda mainkan. Dan yang lebih hebat nya lagi game slot online dengan duit asli ini tergolong dalam tipe susunan slot gampang menang.</p>
 
