--- a/index.html
+++ b/index.html
@@ -213,17 +213,17 @@
 <div class="col-md-8">
 				<div class="row logform">
 					<div class="col-xs-6">
-						<a href="https://linktr.ee/linkslot88gacor" target="_blank" rel="nofollow noreferrer"><span class="tron-login">LOGIN</span></a>
+						<a href="https://bit.ly/joinviralbola88" target="_blank" rel="nofollow noreferrer"><span class="tron-login">LOGIN</span></a>
 					</div>
 					<div class="col-xs-6">
-						<a href="https://linktr.ee/linkslot88gacor" target="_blank" rel="nofollow noreferrer"><span class="tron-regis">DAFTAR</span></a>
+						<a href="https://bit.ly/joinviralbola88" target="_blank" rel="nofollow noreferrer"><span class="tron-regis">DAFTAR</span></a>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-12 mt-3">
-				<a href="https://linktr.ee/linkslot88gacor" rel="nofollow noreferrer" target="_blank"><button type="login" class="btn btn-daf">PG SOFT SLOT ONLINE GACOR TERBARU 2022</a>
+				<a href="https://bit.ly/joinviralbola88" rel="nofollow noreferrer" target="_blank"><button type="login" class="btn btn-daf">PG SOFT SLOT ONLINE GACOR TERBARU 2022</a>
 			</div>
 		</div>
 	</div>	
